# kompas-3d-mcp-linux

./: .gitignore  README.md
skills/kompas-mcp-operator/: SKILL.md
src/: CMakeLists.txt  CMakePresets.json  bridge.cpp  server.py
src/CMake/: CompileOptions.cmake
